ctui-components/src/snapshots/ctui_components__block__tests__border_top_bottom.snap
---
source: ctui-components/src/block.rs
assertion_line: 429
expression: result
---
──────────
          
          
          
──────────
