ctui-components/src/snapshots/ctui_components__block__tests__border_top_left.snap
---
source: ctui-components/src/block.rs
assertion_line: 500
expression: result
---
┌─────────
│         
│         
│         
│
