ctui-components/src/snapshots/ctui_components__block__tests__border_top_only.snap
---
source: ctui-components/src/block.rs
assertion_line: 415
expression: result
---
──────────
