ctui-components/src/snapshots/ctui_components__block__tests__border_with_title_bottom.snap
---
source: ctui-components/src/block.rs
expression: result
---
┌ Top ────────┐
│             │
│             │
│             │
└ Bottom ─────┘
