ctui-components/src/snapshots/ctui_components__block__tests__border_with_title_left.snap
---
source: ctui-components/src/block.rs
assertion_line: 443
expression: result
---
┌ Title ──────┐
│             │
│             │
│             │
└─────────────┘
