ctui-components/src/snapshots/ctui_components__block__tests__border_with_title_right.snap
---
source: ctui-components/src/block.rs
assertion_line: 461
expression: result
---
┌────── Title ┐
│             │
│             │
│             │
└─────────────┘
