ctui-components/src/snapshots/ctui_components__block__tests__small_area.snap
---
source: ctui-components/src/block.rs
assertion_line: 507
expression: result
---
┌─┐
│ │
└─┘
